Revert "Revert "fix: readability styling issues""
This reverts commit 987ae7a6223c38c35dcb4e31defe0ff608960efb.

--- a/src/assets/scss/playlist.scss
+++ b/src/assets/scss/playlist.scss
@@ -158,6 +158,9 @@
     border-width: 0px;
     margin: 0em 2em;
     margin-bottom: 1em;
+    &::placeholder {
+      opacity: 0.5;
+    }
     @media (max-width: 900px) {
       margin: 0em 0em;
       margin-bottom: 1em;
